Completely Responsive Login Page: Achieved. ! bug note: has an alignment bug for very small devices

--- a/Sign-In-Page/login.css
+++ b/Sign-In-Page/login.css
@@ -157,7 +157,7 @@ button {
   color: #ea454c;
 }
 
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 1024px) {
   body {
     flex-direction: column-reverse;
     justify-content: center;
@@ -171,49 +171,13 @@ button {
     background: url("./Assets/img-desktop.jpg") no-repeat center/cover;
   }
 
-  .scroll-box {
-    display: flex;
-    justify-content: center;
-    height: 35px;
-    width: 25px;
-    border: 2px solid black;
-    border-radius: 45%;
-    position: relative;
-    margin: auto;
-    margin-top: 90vh;
-  }
-
-  .scroll-indicator {
-    content: "";
-    position: absolute;
-    width: 5px;
-    height: 5px;
-    background-color: black;
-    border: 2px solid black;
-    border-radius: 50%;
-    top: 5px;
-
-    animation: animate 1s linear infinite;
-  }
-
-  @keyframes animate {
-    0% {
-      opacity: 1;
-      top: 5px;
-    }
-
-    100% {
-      opacity: 0;
-      top: 20px;
-      transform: scale(0.8);
-    }
-  }
-
-
-
   .login-form {
     height: 100vh;
     margin: 0;
-    /* padding-top: 20%; */
+    padding-top: 20%;
   }
 }
+
+
+
+
